# grpc-rs-bench

./: Cargo.toml
proto/: Cargo.toml  build.rs  mod.rs  pingpong.proto
proto/src/: lib.rs  pingpong.rs  pingpong_grpc.rs
proto/src/proto/: mod.rs  pingpong.rs
src/: client.rs  client_bak.rs  client_tonic.rs  lib.rs  server.rs
