[package]
name = "grpc-rs-perf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "pingpong_server"
path = "src/server.rs"

[[bin]]
name = "pingpong_client"
path = "src/client.rs"
[[bin]]
name = "pingpong_client_tonic"
path = "src/client_tonic.rs"

[workspace]
members = [
    "proto",
]

[dependencies]
grpcio = "0.13"
futures = "0.3"
proto = { path = "./proto"}
futures-channel = { version = "0.3", features = ["sink"] }
futures-executor = "0.3"
futures-util = { version = "0.3", features = ["sink"] }
futures-timer = "3.0"
clap = { version = "3.1", features = ["derive", "env", "cargo", "yaml"] }
tokio = {version = "1.18", features = ["full"]}


