[package]
name = "proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grpcio = "0.13"
protobuf = "2"
futures = "0.3"
tonic = { version = "0.10", features = ["gzip"]}
prost = "0.12"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true

[build-dependencies]
protoc-grpcio = "3"
tonic-build = {version = "0.10", features = ["prost"]}